# Cyborg

./: Makefile.in  config.h.in  config.h.in~  configure  configure.ac  configure.scan
src/: Makefile.am  Makefile.in  assimilator.c  assimilator.h  configuration_parser.c  configuration_parser.h  cyborg.c  network-manager.c  network-manager.h  network.c  network.h  network_configuration.c  network_configuration.h  pulseaudio.c  pulseaudio.h  synergy.c  synergy.h  types.h
tests/: Makefile.am  Makefile.in  assimilator.c  checker.c  configuration_parser.c  killall  network-manager.c  network-manager.h  network.c  network.h  network_configuration.c  network_configuration.h  pulseaudio.c  synergy.c  synergy.h  synergyc  test.conf  test_api.h  test_config.json  test_module.h
